// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> should render a tag 1`] = `
<Chip
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={true}
>
  <div
    className="css-h0zu4c"
  >
    <Button
      className="css-i7sqdh"
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="css-i7sqdh css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={[Function]}
      >
        <Cross
          color="#5ccee3"
          size={16}
        >
          <Icon
            className=""
            color="#5ccee3"
            content="<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>"
            size={16}
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>",
                }
              }
              style={
                Object {
                  "fill": "#5ccee3",
                  "fontSize": 16,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Cross>
      </button>
    </Button>
    <Button
      className="css-1al9zi1"
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="css-1al9zi1 css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={[Function]}
      >
        text
      </button>
    </Button>
  </div>
</Chip>
`;

exports[`<Chip /> should render a without removable icon 1`] = `
<Chip
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={false}
>
  <div
    className="css-9h5w63"
  >
    <Button
      className="css-1al9zi1"
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="css-1al9zi1 css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={[Function]}
      >
        text
      </button>
    </Button>
  </div>
</Chip>
`;
